--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               />
             </div><br>
             <div class="form-action-buttons">
-              <input type="submit" value="Submit" />
+              <input type="submit" value="Submit" id="submitBtn" />
             </div>
           </form>
         </td>
